--- a/app/src/main/res/drawable/background_on.xml
+++ b/app/src/main/res/drawable/background_on.xml
@@ -2,12 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="180"
-        android:centerColor="#0c410e"
-        android:endColor="#000000"
-        android:startColor="#000000"
+        android:centerColor="#FFFFFF"
+        android:endColor="#36373D"
+        android:startColor="#FFFFFF"
         android:type="linear" />
 </shape>
-    <!--
-    android:startColor="#ff1800"
-     android:centerColor="#35ff3b"
-    -->
